Correções menores