@@ -58,7 +58,8 @@ public class Hand {
 	private final BondedList<Drawable> cards;
 	private final BondedList<Drawable> destinyDeck;
 	private final Hero hero;
-	private Pair<Race, Race> combo;
+	private final Pair<Race, Race> combo;
+	private final double divergence;
 	private int baseHp;
 	private int baseManaPerTurn;
 	private float mitigation = 0;
@@ -83,6 +84,8 @@ public class Hand {
 			this.deque = null;
 			this.cards = null;
 			this.destinyDeck = null;
+			this.combo = null;
+			this.divergence = 0;
 			this.raceCount = null;
 			this.hero = null;
 			return;
@@ -95,6 +98,8 @@ public class Hand {
 		this.deque = new BondedList<>(bonding);
 		this.cards = new BondedList<>(bonding);
 		this.destinyDeck = new BondedList<>(bonding);
+		this.combo = Race.getCombo(dk.getChampions());
+		this.divergence = dk.getAverageDivergence();
 
 		game.getDivergence().put(user.getId(), dk.getAverageDivergence());
 
@@ -114,7 +119,7 @@ public class Hand {
 				Stream.of(champs, equips, fields)
 						.flatMap(List::stream)
 						.map(Drawable::copy)
-						.collect(Collectors.toList())
+						.toList()
 		);
 		if (hero != null && hero.getHp() > 0 && hero.getQuest() == null)
 			deque.add(hero.toChampion());
@@ -178,7 +183,6 @@ public class Hand {
 			baseManaPerTurn = 5;
 		}
 
-		combo = Race.getCombo(champs);
 		if (combo.getLeft() == Race.DIVINITY) {
 			for (Drawable d : deque) {
 				if (d instanceof Champion c) {
@@ -413,17 +417,21 @@ public class Hand {
 		return combo;
 	}
 
+	public double getDivergence() {
+		return divergence;
+	}
+
+	public BondedList<Drawable> getDeque() {
+		if (lockTime > 0) return new BondedList<>(deque.getBonding());
+		else return getRealDeque();
+	}
+
 	public BondedList<Drawable> getRealDeque() {
 		if (deque.isEmpty()) {
 			deque.addAll(destinyDeck);
 			destinyDeck.clear();
 		}
 		return deque;
-	}
-
-	public BondedList<Drawable> getDeque() {
-		if (lockTime > 0) return new BondedList<>(deque.getBonding());
-		else return getRealDeque();
 	}
 
 	public BondedList<Drawable> getCards() {
